org.mmisw.voc2rdf II 
Carlos Rueda - MMI / MBARI

ChangeLog

2008-11-04 (2.0.alpha3)
	- Integration with ontmd
	
	- Everything working pretty nicely! :-)
	
	TODO: Unify replicated code with ontmd !!
	

2008-10-27 (2.0.alpha1)

	- Complete new layout based on tabs:
		Vocabulary: with contents of the vocabulary including optional tabular for inspection
		Metadata: with subtabs for the various metadata groups
		Conversion: to allow namespace root and show RDF result
		Upload: to capture user login and perform upload to the registry
	- More flexible mechanism to associate metadata attributes (not just a fixes set of
	  DC ones). Currently using some of the properties defined in Omv and OmvMmi.

	- "test conversion" button on vocabPanel: it now runs the conversion in a dialog; it uses 
	the example values for the required metadata attributes.
	  		
	- ConversionPanel: Simplified: fixed namespace root ("http://mmisw.org/ont)
	
	- Upload/user panels: Now, user first logs in to the registry using his/her username (not
	  userId) and password. This action obtains a sessionId and the userId than can be used for
	  the actual upload.
	  
	- Several other changes.
	
	TODO:
		- doUpload: check response and show more user-friendly message
		
	
2008-10-24
	- Because of problems to use the java sources in:
	  http://mmi.cvs.sourceforge.net/viewvc/mmi/org.mmi.ont.voc2owl/src/org/mmi/ont/voc2owl/trans/
	  I asked Luis to make sure the repository is up to date... well, there were uncommitted changes!
	  Ok, now it works, so I'm removing the dependency on the org.mmi.ont.voc2owl.trans.jar library,
	  and continuing using the new package org.mmisw.voc2rdf.transf as indicated yesterday.
	  Now, will continue with clean-up and preparation to support metadata
	  attributes in a more flexible way (current library only uses a set of the DC properties).
	  
	  
2008-10-23
	- Starting changes for enhanced metadata handling in the conversion: