@@ -34,7 +34,7 @@ import com.google.gwt.user.client.ui.Widget;
 public class Main implements EntryPoint {
 
 	public static final String APP_NAME = "Voc2RDF";
-	public static final String VERSION = "2.0.alpha3";
+	public static final String VERSION = "2.0.alpha5";
 	public static final String VERSION_COMMENT = "";
 
 	static String baseUrl;
