@@ -3,6 +3,17 @@ Carlos Rueda - MMI / MBARI
 
 ChangeLog
 
+2008-11-05 (2.0.alpha5)
+	- Some GUI improvements.
+	
+	- Fixed 26: URIs in voc2rdf owl files still have _tmp_ in them:
+		Converter: The primary class should be lowercased:
+		     finalUri += "/" + getPrimaryClass().toLowerCase()
+		so no "j.0" namespace is generated, and instead the definitions are
+		associated with the ontology itself.  (subtle!)
+		
+	
+	
 2008-11-04 (2.0.alpha3)
 	- Integration with ontmd
 	
